--- a/about/style-2.css
+++ b/about/style-2.css
@@ -1,16 +1,16 @@
 @font-face{
-  font-family: 'apercu_regular';
-  src: url('apercu_regular.eot');
-  src: url('apercu_regular.eot?#iefix') format('embedded-opentype'),
-       url('apercu_regular.woff') format('woff'),
-       url('apercu_regular.ttf') format('truetype'),
-       url('apercu_regular.svg#webfont') format('svg');
+	font-family: 'apercu_regular';
+	src: url('../fonts/apercu_regular.eot');
+	src: url('../fonts/apercu_regular.eot?#iefix') format('embedded-opentype'),
+	     url('../fonts/apercu_regular.woff') format('woff'),
+	     url('../fonts/apercu_regular.ttf') format('truetype'),
+	     url('../fonts/apercu_regular.svg#webfont') format('svg');
 }
 
 @font-face {
     font-family: 'apercu_prolight';
-    src: url('apercu_pro_light-webfont.woff2') format('woff2'),
-         url('apercu_pro_light-webfont.woff') format('woff');
+    src: url('../fonts/apercu_pro_light-webfont.woff2') format('woff2'),
+         url('../fonts/apercu_pro_light-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -26,6 +26,7 @@ div#wrapper{
   height: 3.5rem;
   margin-top: 2rem;
 }
+
 .menu {
   -webkit-transition: 0.1s -webkit-transform linear;
   transition: 0.1s -webkit-transform linear;
